# matomo-to-umami

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/matomo_to_umami/: __init__.py  mappings.py  migrate.py  region_mappings.py
tests/: __init__.py  test_mappings.py  test_migration.py
